worksheet + double click on samples list

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -5,7 +5,9 @@ bin.includes = plugin.xml,\
                icons/,\
                .,\
                conf/,\
-               lib/
+               lib/,\
+               lib/sdk-writable-core.jar,\
+               lib/sdk-writeable-client.framework.jarconf/
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
