--- a/build.xml
+++ b/build.xml
@@ -223,7 +223,7 @@
 	<!--Add the length="#" field into .hbm.xml, references the biobank.uml file for the VARCHAR(#) -->
 	<target name="string-length-field-addition"
 	  description="Add the length='#' field into .hbm.xml, references the biobank.uml file for the VARCHAR(#)">
-		<exec executable="perl">
+		<exec executable="/usr/bin/perl">
 			<env key="PATH" path="${scripts.proj.dir}" />
 			<arg value="${scripts.proj.dir}/hbmstringlength.pl" />
 			<arg value="${model.proj.dir}/biobank2.uml" />
