--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
 	    prefix="grid-remoting" />
 	<property file="${cacore.sdk.dir}/${grid-jaas.dir}/build.properties"
 	    prefix="grid-jaas" />
-		
+
 	<condition property="server-exclude-commons-logging"
 	     value="commons-logging*.*"
 	     else="">
@@ -199,6 +199,7 @@
 			<transaction src="${data.sql.dir}/pvInfoPossible.sql" />
 			<transaction src="${data.sql.dir}/sampleSources.sql" />
 			<transaction src="${data.sql.dir}/sampleTypes.sql" />
+                        <transaction src="${data.sql.dir}/containerNumScheme.sql" />
 			<transaction src="${security.dir}/schemaSecurityDump.sql" />
 			<transaction>commit;</transaction>
 			<classpath>
