--- a/schema/log4j.properties
+++ b/schema/log4j.properties
@@ -17,7 +17,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
-log4j.logger.com.mchange=debug
+#log4j.logger.com.mchange=debug
+log4j.logger.com.mchange=info
 
 #log4j.rootLogger=warn, stdout
 #log4j.rootLogger=warn, file
