--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
 	<property name="data.sql.dir" location="${data.dir}/sql" />
 	<property name="schema.dir" location="schema" />
 	<property name="security.dir" location="security" />
-	<property name="logs.dir" location="logs" />
+	<property name="secu-log.dir" location="security-logs" />
 	<property name="mysql.driver.string" value="com.mysql.jdbc.Driver" />
 	<property name="database.host" value="localhost" />
 	<property name="database.port" value="3306" />
@@ -169,16 +169,16 @@
 	<target name="deploy-jboss"  depends="package-webapp-orm"
 	  description="deploys the caCORE SDK webapp to JBoss">
 		<fail unless="env.JBOSS_HOME" message="$JBOSS_HOME not defined" />
-		<copy file="${security.dir}/jboss/login-config.xml"
+		<copy file="${secu-log.dir}/jboss/login-config.xml"
 	  tofile="${env.JBOSS_HOME}/server/default/conf/login-config.xml" overwrite="true" />
-		<delete file="${env.JBOSS_HOME}/server/default/deploy/mysql-ds.xml"/>
-		<copy file="${security.dir}/jboss/upt-ds.xml"
+		<delete file="${env.JBOSS_HOME}/server/default/deploy/mysql-ds.xml"/><!-- for compatibility: this file has been split -->
+		<copy file="${secu-log.dir}/jboss/upt-ds.xml"
 	  tofile="${env.JBOSS_HOME}/server/default/deploy/upt-ds.xml" overwrite="true"/>
-		<copy file="${security.dir}/jboss/upt.war"
+		<copy file="${secu-log.dir}/jboss/upt.war"
 	  tofile="${env.JBOSS_HOME}/server/default/deploy/upt.war" overwrite="true"/>
-		<copy file="${logs.dir}/llt-ds.xml"
+		<copy file="${secu-log.dir}/llt-ds.xml"
 	  tofile="${env.JBOSS_HOME}/server/default/deploy/llt-ds.xml" overwrite="true"/>
-		<copy file="${logs.dir}/llt.war"
+		<copy file="${secu-log.dir}/llt.war"
 	  tofile="${env.JBOSS_HOME}/server/default/deploy/llt.war" overwrite="true"/>
 
 		<copy file="${cacore.sdk.dir}/output/biobank2/package/webapp/biobank2.war"
@@ -205,7 +205,7 @@
 			<transaction src="${data.sql.dir}/sampleSources.sql" />
 			<transaction src="${data.sql.dir}/sampleTypes.sql" />
                         <transaction src="${data.sql.dir}/containerNumScheme.sql" />
-			<transaction src="${security.dir}/schemaSecurityDump.sql" />
+			<transaction src="${secu-log.dir}/schemaSecurityLogDump.sql" />
 			<transaction>commit;</transaction>
 			<classpath>
 				<fileset dir="${cacore.sdk.dir}/system/lib">
