correction for icons loading as a plugin

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -5,8 +5,7 @@ bin.includes = plugin.xml,\
                icons/,\
                .,\
                conf/,\
-               lib/sdk-writable-core.jar,\
-               lib/sdk-writeable-client.framework.jarconf/
+               lib/
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
