Added Calibration Dialog from BioSampleScan

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -5,7 +5,8 @@ bin.includes = plugin.xml,\
                icons/,\
                .,\
                conf/,\
-               lib/
+               lib/,\
+               lib/ini4j-0.5.1.jar
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
