--- a/build.xml
+++ b/build.xml
@@ -7,12 +7,13 @@
     -->
 
 	<property environment="env" />
+	<property name="host" value="aicml-med.cs.ualberta.ca" />
+	<property name="${host}/" value="" />
 	<property name="cacore.sdk.dir" location="caCORE_SDK/sdk" />
+	<property name="cacore.sdk.filename" value="caCORE_SDK_411.tar.gz" />
 	<property name="eclipse.proj.dir" location="eclipse_ws/biobank2" />
-	<property name="eclipse.proj.dir.importer"
-	    location="eclipse_ws/biobank2.importer" />
-	<property name="eclipse.proj.dir.junit"
-	    location="eclipse_ws/biobank2.tests" />
+	<property name="eclipse.proj.dir.importer" location="eclipse_ws/biobank2.importer" />
+	<property name="eclipse.proj.dir.junit" location="eclipse_ws/biobank2.tests" />
 	<property name="scripts.proj.dir" location="scripts" />
 	<!--tp-->
 	<property name="model.proj.dir" location="model" />
@@ -29,9 +30,9 @@
 	<property name="database.username" value="dummy" />
 	<property name="database.password" value="ozzy498" />
 
-    <condition property="perl" value="perl" else="/usr/bin/perl">
-         <os family="windows" />
-     </condition>
+	<condition property="perl" value="perl" else="/usr/bin/perl">
+		<os family="windows" />
+	</condition>
 
 	<!--
      files included in the sdk build.xml - necessary to be sure that we have
@@ -41,79 +42,58 @@
 	<property file="${cacore.sdk.dir}/local.properties" />
 	<property file="${cacore.sdk.dir}/conf/deploy.properties" />
 	<property file="${cacore.sdk.dir}/build.properties" />
-	<property file="${cacore.sdk.dir}/${codegen.dir}/build.properties"
-	    prefix="codegen" />
-	<property file="${cacore.sdk.dir}/${codegen.validator.dir}/build.properties"
-	    prefix="validator" />
-	<property file="${cacore.sdk.dir}/${system.dir}/build.properties"
-	    prefix="system" />
-	<property file="${cacore.sdk.dir}/${writable-api.dir}/build.properties"
-	    prefix="writable-api" />
-	<property file="${cacore.sdk.dir}/${security.dir}/build.properties"
-	    prefix="security" />
-	<property file="${cacore.sdk.dir}/${grid-remoting.dir}/build.properties"
-	    prefix="grid-remoting" />
-	<property file="${cacore.sdk.dir}/${grid-jaas.dir}/build.properties"
-	    prefix="grid-jaas" />
+	<property file="${cacore.sdk.dir}/${codegen.dir}/build.properties" prefix="codegen" />
+	<property file="${cacore.sdk.dir}/${codegen.validator.dir}/build.properties" prefix="validator" />
+	<property file="${cacore.sdk.dir}/${system.dir}/build.properties" prefix="system" />
+	<property file="${cacore.sdk.dir}/${writable-api.dir}/build.properties" prefix="writable-api" />
+	<property file="${cacore.sdk.dir}/${security.dir}/build.properties" prefix="security" />
+	<property file="${cacore.sdk.dir}/${grid-remoting.dir}/build.properties" prefix="grid-remoting" />
+	<property file="${cacore.sdk.dir}/${grid-jaas.dir}/build.properties" prefix="grid-jaas" />
 
-	<condition property="server-exclude-commons-logging"
-	     value="commons-logging*.*"
-	     else="">
-		<equals arg1="${SERVER_TYPE}"
-	    arg2="jboss"
-	    casesensitive="false"
-	    trim="true" />
+	<condition property="server-exclude-commons-logging" value="commons-logging*.*" else="">
+		<equals arg1="${SERVER_TYPE}" arg2="jboss" casesensitive="false" trim="true" />
 	</condition>
 	<condition property="server-exclude-log4j" value="log4j*.*" else="">
-		<equals arg1="${SERVER_TYPE}"
-	    arg2="jboss"
-	    casesensitive="false"
-	    trim="true" />
+		<equals arg1="${SERVER_TYPE}" arg2="jboss" casesensitive="false" trim="true" />
 	</condition>
-	<condition property="server-exclude-classes-list"
-	     value="**/log4j*.*"
-	     else="">
-		<equals arg1="${SERVER_TYPE}"
-	    arg2="jboss"
-	    casesensitive="false"
-	    trim="true" />
+	<condition property="server-exclude-classes-list" value="**/log4j*.*" else="">
+		<equals arg1="${SERVER_TYPE}" arg2="jboss" casesensitive="false" trim="true" />
 	</condition>
-	<condition property="WRITABLE_API_EXTENSION_ENABLED"
-	     value="true"
-	     else="false">
+	<condition property="WRITABLE_API_EXTENSION_ENABLED" value="true" else="false">
 		<or>
-			<equals arg1="${ENABLE_WRITABLE_API_EXTENSION}"
-	      arg2="true"
-	      casesensitive="false"
-	      trim="true" />
-			<equals arg1="${ENABLE_WRITABLE_API_EXTENSION}"
-	      arg2="yes"
-	      casesensitive="false"
-	      trim="true" />
+			<equals arg1="${ENABLE_WRITABLE_API_EXTENSION}" arg2="true" casesensitive="false" trim="true" />
+			<equals arg1="${ENABLE_WRITABLE_API_EXTENSION}" arg2="yes" casesensitive="false" trim="true" />
 		</or>
 	</condition>
 	<condition property="read-api-exclude-list" value="" else="*.jar">
-		<equals arg1="${WRITABLE_API_EXTENSION_ENABLED}"
-	    arg2="true"
-	    casesensitive="false"
-	    trim="true" />
+		<equals arg1="${WRITABLE_API_EXTENSION_ENABLED}" arg2="true" casesensitive="false" trim="true" />
 	</condition>
 	<condition property="SECURITY_ENABLED" value="true" else="false">
 		<or>
-			<equals arg1="${ENABLE_SECURITY}"
-	      arg2="true"
-	      casesensitive="false"
-	      trim="true" />
-			<equals arg1="${ENABLE_SECURITY}"
-	      arg2="yes"
-	      casesensitive="false"
-	      trim="true" />
+			<equals arg1="${ENABLE_SECURITY}" arg2="true" casesensitive="false" trim="true" />
+			<equals arg1="${ENABLE_SECURITY}" arg2="yes" casesensitive="false" trim="true" />
 		</or>
 	</condition>
 	<!-- end of copied part -->
 
+	<target name="check-cacore-sdk-available">
+		<available file="${cacore.sdk.dir}/build.xml" type="dir" property="cacore.sdk.available" />
+	</target>
 
-	<target name="sdk" description="builds the caCORE SDK from the data model">
+	<target name="cacore-download" depends="check-cacore-sdk-available" unless="cacore.sdk.available" 
+		description="downloads caCORE SDK from the host machine">
+		<echo message="downloading caCORE SDK..." />
+		<mkdir dir="caCORE_SDK" />
+		<exec executable="curl">
+			<arg value="--silent" />
+			<arg value="-o${cacore.sdk.filename}" />
+			<arg value="http://${host}/${cacore.sdk.filename}" />
+		</exec>
+        <mkdir dir="${cacore.sdk.dir}" />
+		<untar src="${cacore.sdk.filename}" compression="gzip" dest="${cacore.sdk.dir}"/>
+	</target>
+
+	<target name="sdk" depends="cacore-download" description="builds the caCORE SDK from the data model">
 		<copy file="sdk_conf/deploy.properties" tofile="${cacore.sdk.dir}/conf/deploy.properties" />
 		<ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
 		<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" id="sdk.jar.files">
@@ -128,16 +108,12 @@
 
 	<target name="sdk-and-scripts" depends="sdk" />
 
-	<target name="deploy-eclipse"
-	  description="deploys the caCORE SDK beans to the eclipse project"
-	  depends="sdk-and-scripts">
+	<target name="deploy-eclipse" description="deploys the caCORE SDK beans to the eclipse project" depends="sdk-and-scripts">
 		<dependset>
-			<srcfilelist
-         dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib"
-         files="*.jar" />
-			<targetfilelist dir="${eclipse.proj.dir}/lib" files="${sdk.jar.files.basename}"/>
-			<targetfilelist dir="${eclipse.proj.dir.importer}/lib" files="${sdk.jar.files.basename}"/>
-			<targetfilelist dir="${eclipse.proj.dir.test}/lib" files="${sdk.jar.files.basename}"/>
+			<srcfilelist dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" files="*.jar" />
+			<targetfilelist dir="${eclipse.proj.dir}/lib" files="${sdk.jar.files.basename}" />
+			<targetfilelist dir="${eclipse.proj.dir.importer}/lib" files="${sdk.jar.files.basename}" />
+			<targetfilelist dir="${eclipse.proj.dir.test}/lib" files="${sdk.jar.files.basename}" />
 		</dependset>
 		<copy todir="${eclipse.proj.dir}/lib">
 			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
@@ -147,7 +123,7 @@
 				<include name="application-config-client*.xml" />
 			</fileset>
 		</copy>
-		<copy todir="${eclipse.proj.dir.importer}/lib" >
+		<copy todir="${eclipse.proj.dir.importer}/lib">
 			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
 		</copy>
 		<copy todir="${eclipse.proj.dir.importer}/conf">
@@ -166,23 +142,17 @@
 		</copy>
 	</target>
 
-	<target name="deploy-jboss"  depends="package-webapp-orm"
-	  description="deploys the caCORE SDK webapp to JBoss">
+	<target name="deploy-jboss" depends="package-webapp-orm" description="deploys the caCORE SDK webapp to JBoss">
 		<fail unless="env.JBOSS_HOME" message="$JBOSS_HOME not defined" />
-		<copy file="${secu-log.dir}/jboss/login-config.xml"
-	  tofile="${env.JBOSS_HOME}/server/default/conf/login-config.xml" overwrite="true" />
-		<delete file="${env.JBOSS_HOME}/server/default/deploy/mysql-ds.xml"/><!-- for compatibility: this file has been split -->
-		<copy file="${secu-log.dir}/jboss/upt-ds.xml"
-	  tofile="${env.JBOSS_HOME}/server/default/deploy/upt-ds.xml" overwrite="true"/>
-		<copy file="${secu-log.dir}/jboss/upt.war"
-	  tofile="${env.JBOSS_HOME}/server/default/deploy/upt.war" overwrite="true"/>
-		<copy file="${secu-log.dir}/jboss/llt-ds.xml"
-	  tofile="${env.JBOSS_HOME}/server/default/deploy/llt-ds.xml" overwrite="true"/>
-		<copy file="${secu-log.dir}/jboss/llt.war"
-	  tofile="${env.JBOSS_HOME}/server/default/deploy/llt.war" overwrite="true"/>
+		<copy file="${secu-log.dir}/jboss/login-config.xml" tofile="${env.JBOSS_HOME}/server/default/conf/login-config.xml" overwrite="true" />
+		<delete file="${env.JBOSS_HOME}/server/default/deploy/mysql-ds.xml" />
+		<!-- for compatibility: this file has been split -->
+		<copy file="${secu-log.dir}/jboss/upt-ds.xml" tofile="${env.JBOSS_HOME}/server/default/deploy/upt-ds.xml" overwrite="true" />
+		<copy file="${secu-log.dir}/jboss/upt.war" tofile="${env.JBOSS_HOME}/server/default/deploy/upt.war" overwrite="true" />
+		<copy file="${secu-log.dir}/jboss/llt-ds.xml" tofile="${env.JBOSS_HOME}/server/default/deploy/llt-ds.xml" overwrite="true" />
+		<copy file="${secu-log.dir}/jboss/llt.war" tofile="${env.JBOSS_HOME}/server/default/deploy/llt.war" overwrite="true" />
 
-		<copy file="${cacore.sdk.dir}/output/biobank2/package/webapp/biobank2.war"
-	  tofile="${env.JBOSS_HOME}/server/default/deploy/biobank2.war" overwrite="true"/>
+		<copy file="${cacore.sdk.dir}/output/biobank2/package/webapp/biobank2.war" tofile="${env.JBOSS_HOME}/server/default/deploy/biobank2.war" overwrite="true" />
 	</target>
 
 	<target name="deploy" description="deploys to JBoss and Eclipse project">
@@ -190,21 +160,17 @@
 		<antcall target="deploy-jboss" />
 	</target>
 
-	<target name="schema"
-	  description="generates the database schema for the caCORE SDK data model">
+	<target name="schema" description="generates the database schema for the caCORE SDK data model">
 		<ant dir="${schema.dir}" target="schemaexport" inheritRefs="false" />
 	</target>
 
 	<target name="dbcreate" description="creates the default tables">
 		<antcall target="schema" />
-		<sql driver="${mysql.driver.string}"
-	 url="jdbc:mysql://${database.host}:${database.port}/${database.name}"
-	 userid="${database.username}"
-	 password="${database.password}">
+		<sql driver="${mysql.driver.string}" url="jdbc:mysql://${database.host}:${database.port}/${database.name}" userid="${database.username}" password="${database.password}">
 			<transaction src="${data.sql.dir}/pvInfoPossible.sql" />
 			<transaction src="${data.sql.dir}/sampleSources.sql" />
 			<transaction src="${data.sql.dir}/sampleTypes.sql" />
-                        <transaction src="${data.sql.dir}/containerLabelingScheme.sql" />
+			<transaction src="${data.sql.dir}/containerLabelingScheme.sql" />
 			<transaction src="${secu-log.dir}/schemaSecurityLogDump.sql" />
 			<transaction>commit;</transaction>
 			<classpath>
@@ -216,8 +182,7 @@
 	</target>
 
 	<!--Add the length="#" field into .hbm.xml, references the biobank.uml file for the VARCHAR(#) -->
-	<target name="string-length-field-addition"
-	  description="Add the length='#' field into .hbm.xml, references the biobank.uml file for the VARCHAR(#)">
+	<target name="string-length-field-addition" description="Add the length='#' field into .hbm.xml, references the biobank.uml file for the VARCHAR(#)">
 		<exec executable="${perl}">
 			<env key="PATH" path="${scripts.proj.dir}" />
 			<arg value="${scripts.proj.dir}/hbmstringlength.pl" />
@@ -228,14 +193,10 @@
 		</exec>
 	</target>
 
-	<target name="package-codegen-orm"
-	  description="REDO:: Packages the generated ORM and bean artifacts"
-	  depends="string-length-field-addition">
-		<jar destfile="${cacore.sdk.dir}\${build.jar.dir}\${orm.file}"
-	 basedir="${cacore.sdk.dir}\${output.src.dir}">
+	<target name="package-codegen-orm" description="REDO:: Packages the generated ORM and bean artifacts" depends="string-length-field-addition">
+		<jar destfile="${cacore.sdk.dir}\${build.jar.dir}\${orm.file}" basedir="${cacore.sdk.dir}\${output.src.dir}">
 			<manifest>
-				<attribute name="Generated-By"
-		   value="caCORE SDK Code Generator" />
+				<attribute name="Generated-By" value="caCORE SDK Code Generator" />
 				<attribute name="Version" value="${VERSION}" />
 			</manifest>
 			<include name="**/*.hbm.xml" />
@@ -247,34 +208,25 @@
 
 	<!-- copied from sdk build.xml -->
 	<target name="package-webapp-orm" depends="package-codegen-orm">
-		<war destfile="${cacore.sdk.dir}\${package.system.dir}\${PROJECT_NAME}.war"
-	 webxml="${cacore.sdk.dir}\${build.conf.web-inf.dir}\web.xml">
+		<war destfile="${cacore.sdk.dir}\${package.system.dir}\${PROJECT_NAME}.war" webxml="${cacore.sdk.dir}\${build.conf.web-inf.dir}\web.xml">
 			<manifest>
-				<attribute name="Generated-By"
-		   value="biobank2 caCORE SDK Code Generator" />
+				<attribute name="Generated-By" value="biobank2 caCORE SDK Code Generator" />
 				<attribute name="Version" value="${VERSION}" />
 			</manifest>
-			<lib dir="${cacore.sdk.dir}\${system.dir}\${system.dist.dir}"
-	   includes="*.jar" />
-			<lib dir="${cacore.sdk.dir}\${writable-api.dir}\${writable-api.dist.dir}"
-	   includes="*.jar">
+			<lib dir="${cacore.sdk.dir}\${system.dir}\${system.dist.dir}" includes="*.jar" />
+			<lib dir="${cacore.sdk.dir}\${writable-api.dir}\${writable-api.dist.dir}" includes="*.jar">
 				<exclude name="${read-api-exclude-list}" />
 			</lib>
-			<lib dir="${cacore.sdk.dir}\${build.jar.dir}"
-	   includes="${bean.file}" />
-			<lib dir="${cacore.sdk.dir}\${build.jar.dir}"
-	   includes="${orm.file}" />
-			<lib dir="${cacore.sdk.dir}\${system.dir}\${system.lib.dir}"
-	   includes="*.jar">
+			<lib dir="${cacore.sdk.dir}\${build.jar.dir}" includes="${bean.file}" />
+			<lib dir="${cacore.sdk.dir}\${build.jar.dir}" includes="${orm.file}" />
+			<lib dir="${cacore.sdk.dir}\${system.dir}\${system.lib.dir}" includes="*.jar">
 				<exclude name="${server-exclude-commons-logging}" />
 				<exclude name="${server-exclude-log4j}" />
 				<exclude name="servlet.jar" />
 				<exclude name="xercesImpl*.*" />
 				<exclude name="cog*.*" />
 			</lib>
-			<lib dir="${cacore.sdk.dir}\${grid-jaas.dir}\${grid-jaas.dist.dir}"
-	   includes="*.*"
-	   excludes="${grid-jaas.file.output.jaas.jndibinder.name}" />
+			<lib dir="${cacore.sdk.dir}\${grid-jaas.dir}\${grid-jaas.dist.dir}" includes="*.*" excludes="${grid-jaas.file.output.jaas.jndibinder.name}" />
 			<fileset dir="${cacore.sdk.dir}\${build.conf.system.web.dir}">
 				<include name="**/*" />
 				<exclude name="**/web.xml" />
