remove unecessary lib

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -6,7 +6,9 @@ bin.includes = plugin.xml,\
                .,\
                conf/,\
                lib/,\
-               lib/ini4j-0.5.1.jar
+               lib/ini4j-0.5.1.jar,\
+               lib/sdk-writeable-client.framework.jarconf/,\
+               lib/sdk-writable-core.jar
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
