ModelUtil.getObjectWithAttr corrected (see issue #85)

--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -34,8 +34,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gface_0.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gluegen.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/scanlib.jar"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
-	<classpathentry kind="lib" path="/scannerConfig/lib/scanlib.jar"/>
+	<classpathentry kind="lib" path="lib/scanlib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
