refactoring so an edit form can open it's view form peer

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -17,3 +17,4 @@ source.conf/ = src/,\
                lib/
 output.conf/ = bin/
 source.lib/sdk-writable-core.jar = src/
+Bundle-NativeCode: /scanlib.dll
