--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -84,6 +84,21 @@
             id="edu.ualberta.med.biobank.commands.mainAdmin"
             name="Main Administration">
       </command>
+      <category
+            id="edu.ualberta.med.biobank.category.patientsAdmin"
+            name="Patients Administration">
+      </category>
+      <command
+            categoryId="edu.ualberta.med.biobank.category.patientsAdmin"
+            defaultHandler="edu.ualberta.med.biobank.handler.ScanLinkHandler"
+            id="edu.ualberta.med.biobank.commands.patients.scanLink"
+            name="Scan Link">
+      </command>
+      <command
+            categoryId="edu.ualberta.med.biobank.category.patientsAdmin"
+            id="edu.ualberta.med.biobank.commands.patients.defaultLink"
+            name="Default Link">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -147,31 +162,46 @@
       <menuContribution
             locationURI="toolbar:org.eclipse.ui.main.toolbar">
          <toolbar
-               id="edu.ualberta.med.biobank.toolbar">
+               id="edu.ualberta.med.biobank.toolbar.mainPerpective">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+            </visibleWhen>
+            <command
+               commandId="edu.ualberta.med.biobank.commands.patientAdmin"
+               icon="icons/patientPerspective.png"
+               label="Patients Administration"
+               style="push">
+            </command>
+         </toolbar>         
+         <toolbar
+               id="edu.ualberta.med.biobank.toolbar.patientsPerspective">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="biobank2.patientsPerpectiveSelected">
+               </reference>
+            </visibleWhen>
             <command
                   commandId="edu.ualberta.med.biobank.commands.mainAdmin"
                   icon="icons/mainPerspective.png"
                   label="Main Administration"
                   style="push">
-               <visibleWhen
-                     checkEnabled="true">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patientAdmin"
-                  icon="icons/patientPerspective.png"
-                  label="Patients Administration"
+                  commandId="edu.ualberta.med.biobank.commands.patients.scanLink"
+                  icon="icons/scanLink.png"
+                  label="Scan Link"
                   style="push">
-               <visibleWhen
-                     checkEnabled="true">
-                  <reference
-                        definitionId="biobank2.patientsPerpectiveSelected">
-                  </reference>
-               </visibleWhen>
             </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.defaultLink"
+                  icon="icons/defaultLink.png"
+                  label="Default link"
+                  style="push">
+            </command>            
          </toolbar>
       </menuContribution>
    </extension>
@@ -423,21 +453,18 @@
             id="biobank2.mainPerpectiveSelected">
          <with
                variable="activeWorkbenchWindow.activePerspective">
-            <not>
-               <equals
-                     value="edu.ualberta.med.biobank.perspective.main">
-               </equals></not>
+            <equals
+                  value="edu.ualberta.med.biobank.perspective.main">
+            </equals>
          </with>
       </definition>
       <definition
             id="biobank2.patientsPerpectiveSelected">
          <with
                variable="activeWorkbenchWindow.activePerspective">
-            <not>
-               <equals
-                     value="edu.ualberta.med.biobank.perspective.patients">
-               </equals>
-            </not>
+            <equals
+                  value="edu.ualberta.med.biobank.perspective.patients">
+            </equals>
          </with>
       </definition>
    </extension>
